# ChangeLog for games-fps/kmquake2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Mar 2010; Michał Ziąbkowski <mziab@o2.pl> kmquake2-0.19.2-r1.ebuild:
  Fixed whitespace and other repoman reported errors.

  07 Mar 2010; Michał Ziąbkowski <mziab@o2.pl> kmquake2-0.19.2-r1.ebuild:
  Moved EAPI before inherit.

*kmquake2-0.19.2-r1 (26 Feb 2010)

  26 Feb 2010; Piotr Szymaniak <lazy_bum@o2.pl> +kmquake2-0.19.2-r1.ebuild,
  +files/kmquake2-0.19.2-jpeg8.patch:
  Updated ebuild to work with new jpeg. Thanks to Luis M Wesolowski and
  Sergey Kondakov.

  20 Jan 2010; Piotr Szymaniak <lazy_bum@o2.pl> kmquake2-0.19.2.ebuild:
  Fixed some typos. ;)

  22 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> kmquake2-0.19.2.ebuild:
  Fixed trailing whitespace.

  22 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> Manifest:
  Fixed Manifest.

  01 May 2008; Piotr Szymaniak <lazy_bum@o2.pl> kmquake2-0.19.2.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  26 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> kmquake2-0.19.2.ebuild,
  +files/kmquake2-0.19.2-safe_saving.patch:
  Fixed some save issues (see bug #140121).

  25 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> kmquake2-0.19.2.ebuild:
  Updated ebuild (bug #140121).

  24 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +kmquake2-0.19.2.ebuild,
  +files/kmquake2-0.19.2-alsa.patch, +files/kmquake2-0.19.2-nocd.patch,
  +files/kmquake2-0.19.2-remaping_amd64.patch,
  +files/kmquake2-0.19.2-search_path.patch:
  New package, thanks to Sergey A. Kondakov (bug #140121).