@@ -7,7 +7,6 @@ AUX kmquake2-0.19.2-search_path.patch 434 RMD160 ee16c5e39a26d8fbb185b735fefa414
 DIST KMQuake2-SDL-0.19.2_src_unix.tar.bz2 903038 RMD160 9acfde3da94bb94bd7f9342c185d2623cbb21c2c SHA1 8dfcf5753228111046a0e9018ca6b9460e8cc432 SHA256 55122a90a7deb161a95dd3cfea4aa9f1ad2865e05eeaa07c534dbf6ec5ec6e6c
 DIST KMQuake2_data-0.19.tar 9011200 RMD160 6c31d8e89900a1e99486860f7edac118082b40bf SHA1 2dccfcce36fc45a5653ff8594da87511e3006618 SHA256 f8743db78763db1184ed9bf7612b620fb3c589e904c425f3650c76249d864165
 DIST kmquake2_020_lvlshots_hi.zip 35285872 RMD160 83a28124587ef2b4a162a40aaf92d6f063f10af6 SHA1 e9e167c288ad817d4e771515f8b748219f2888e2 SHA256 7bfb23e04b3d988f3e7695d5ac7555d6bef4dabeab065d7eeb900fbd95a306b5
-EBUILD kmquake2-0.19.2-r1.ebuild 5011 RMD160 08b60313c14f7884f7190cb2c0d3c90fd9515df2 SHA1 5d81bc086ae17ddd9649f1d5dac68e70a0e63ded SHA256 60b653809312cf07f3ac5e5c46199b9425743e0492f7ffeedc686baa8ca6c911
-EBUILD kmquake2-0.19.2.ebuild 4517 RMD160 30fff1704298e5ca1eb4e9538c40b02279eede0b SHA1 a61893f2d7881d6e281da13ba49e49b9ada601d4 SHA256 ff356f5b1ab90c2566b4396edbf3b75789309a618ce8cfb4824bdcbb6eb52e86
-MISC ChangeLog 1586 RMD160 3c7199e22e3afcd261d9d5d760a9b8527f6e31cc SHA1 b2b1a29873660bf0f132362ea1f976456b9c7999 SHA256 b4055a113c19cbf47a872693c6bc3e0fe3b43f87e8654a01b90f787d1a656296
+EBUILD kmquake2-0.19.2-r1.ebuild 5287 RMD160 5c828d700520b198a4fc2ee9e7f77be755c543f3 SHA1 b4485434398f3c3e37a57cd4db6d102ec21c780a SHA256 c9aa4b3961ad9399abb8e221263da9c855842b26937f58d0cba8d541976abb38
+MISC ChangeLog 1730 RMD160 b1ba28c1e3c7b111127ceefae4e3af2f801a8a10 SHA1 22f193b27acd5ccfc0f540c426a15daf3dfdc5e3 SHA256 20b819d13f65cada5661769a0de2d95201d823b8fe9bbbd14d5f687dcf676594
 MISC metadata.xml 247 RMD160 e6b25bfa3980cc1cc9e732b67f457fe2a2e9863c SHA1 4353118d4852f2d7ba4ccbbbb06bbf9fcfd25d24 SHA256 883dd20701cb074b79a6a73acfa6f7e6c5a0dcafba8f506da3ac324327300d68
