@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Aug 2010; Piotr Szymaniak <lazy_bum@o2.pl> -kmquake2-0.19.2.ebuild,
+  kmquake2-0.19.2-r1.ebuild:
+  Updated (see bug #140121 for details).
+
   07 Mar 2010; Michał Ziąbkowski <mziab@o2.pl> kmquake2-0.19.2-r1.ebuild:
   Fixed whitespace and other repoman reported errors.
 
